plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'kr.it.code'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}



configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-web-services'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	
	
	implementation group: 'org.bgee.log4jdbc-log4j2', name:'log4jdbc-log4j2-jdbc4.1', version: '1.16'
	
	implementation 'org.springframework.boot:spring-boot-starter-security:3.4.3'
	
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.1.3.RELEASE'
	
	implementation 'org.webjars:bootstrap:5.3.3'
	implementation 'org.webjars.bower:jquery:3.7.1'

    implementation group: 'org.webjars', name: 'popper.js', version: '2.11.7'
    implementation 'org.webjars:bootstrap-datepicker:1.10.0'
	
	//thymeleaf layout
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.0.0'
	
	implementation group: 'com.github.gavlyukovskiy', name: 'p6spy-spring-boot-starter', version: '1.9.2'

    // QueryDSL 설정
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
	
     implementation 'org.qlrm:qlrm:4.0.1'
    implementation 'ch.simas.qlrm:qlrm:1.7.1'
	
    //object 변환 라이브러리들  JSON <---> Object 
	implementation 'com.fasterxml.jackson.core:jackson-core:2.18.3'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.3'
	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.18.3'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.3'
	
	//JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	//폰트, 이미지
	implementation 'org.webjars:font-awesome:6.5.2'
	implementation 'org.springframework.boot:spring-boot-starter-web'


	//이미지 리사이즈 
	implementation 'com.jhlabs:filters:2.0.235-1'
	implementation 'com.mortennobel:java-image-scaling:0.8.6'
	
	
	 // JWT 설정
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
	
	
}

tasks.named('test') {
	useJUnitPlatform()
}
